--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite-react": "^0.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-scroll": "^1.8.9"
+    "react-router-dom": "^6.16.0",
+    "react-scroll": "^1.8.9",
+    "tw-elements-react": "^1.0.0-alpha1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
