--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.8.9",
+    "swiper": "^10.3.1",
     "tw-elements-react": "^1.0.0-alpha1"
   },
   "devDependencies": {
