--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@headlessui/react": "^1.7.17",
     "axios": "^1.5.1",
     "flowbite-react": "^0.6.4",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.8.9",
+    "sweetalert2": "^11.7.32",
     "swiper": "^10.3.1",
     "tw-elements-react": "^1.0.0-alpha1"
   },
