--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "flowbite-react": "^0.6.4",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.8.9",
+    "redux": "^4.2.1",
     "sweetalert2": "^11.7.32",
     "swiper": "^10.3.1",
     "tw-elements-react": "^1.0.0-alpha1"
