--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "axios": "^1.5.1",
     "downloadjs": "^1.4.7",
     "flowbite-react": "^0.6.4",
+    "html-react-parser": "^4.2.9",
     "html-to-image": "^1.11.11",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.8.9",
